This file is here to allow devs to easily add stuff in the release notes for the next release, it allows easy syncing with the release team, since you don't have to be around when the release takes place...

Just dump whatever you want to have mentioned in the release notes here. Please take care that it is in a way that allows copy&paste to the release notes. That is making sure that spelling/grammar/whatever is usable and that you are using complete sentences, not just single words. Please do use forum syntax and do *NOT* split lines after 80 chars!

Stuff that belongs in here:
* groundbreaking changes (new campaigns, extremely new feature, ...)
* changed dependencies (new things, version bumps, stuff that was removed)
* known bugs

The release team should empty this file after each release.


=======
CHANGES
=======

[section="Removed Terrain"]
The old flowers on grassland terrain (Ggf) has been removed in favour of ^Efm, introduced during the 1.9 development series.
Maps containing the old terrain will no longer load.
[/section]

[section="Lua updated to 5.2"]
Lua interpreter was updated to 5.2
Some of the changes are not compatible, but still work due to the compatibility mode. The compatibility mode would be disabled after several minor releases, so it's best to rework the code according to http://www.lua.org/manual/5.2/manual.html#8
Some of the changes in interpreter are not compatible but don't have a compatibility mode.
[/section]

[section="CMake installation"]
Default man installation directory now confirms to FHS.
[/section]

[section="Another Change"]
[/section]

==========
KNOWN BUGS
==========

[list][*] Text for entry1.
[*] Text for entry2.
[/list]