@@ -341,6 +341,7 @@ Version 1.11.0-svn:
    * Fixed: Allow strict compilation with CMake using the upcoming gcc-4.8.
    * Fixed bug #19795: OOS when [message][option] is used in a (single-player)
      start event when side 1's controller is null.
+   * Changed: Enabled strict compilation for Clang in CMake.
 
 Version 1.10.0:
  * Campaigns:
